--- a/smieci/app/src/main/res/menu/nawigacja.xml
+++ b/smieci/app/src/main/res/menu/nawigacja.xml
@@ -25,7 +25,7 @@
             <item
                 android:id="@+id/nav_logout"
                 android:icon="@drawable/padlock"
-                android:title="Logout"/>
+                android:title="@string/wyloguj"/>
         </menu>
     </item>
 </menu>
