--- a/smieci/app/src/main/res/layout/dodawanie_lokalizacji.xml
+++ b/smieci/app/src/main/res/layout/dodawanie_lokalizacji.xml
@@ -22,7 +22,7 @@
         android:id="@+id/listViewParentG"
         android:layout_width="240dp"
         android:layout_height="200dp"
-        app:layout_constraintTop_toBottomOf="@id/layoutGminaWybierz"
+        app:layout_constraintTop_toBottomOf="@id/editText_Gmina"
         android:orientation="vertical"
         android:background="@drawable/wyszukiwanie_bg"
         app:layout_constraintEnd_toEndOf="parent"
@@ -47,7 +47,7 @@
         android:id="@+id/listViewParentM"
         android:layout_width="240dp"
         android:layout_height="200dp"
-        app:layout_constraintTop_toBottomOf="@id/layoutMiejscWybierz"
+        app:layout_constraintTop_toBottomOf="@id/editTextMiejscowosc"
         android:orientation="vertical"
         android:background="@drawable/wyszukiwanie_bg"
         app:layout_constraintEnd_toEndOf="parent"
@@ -73,7 +73,7 @@
         android:id="@+id/listViewParentU"
         android:layout_width="240dp"
         android:layout_height="200dp"
-        app:layout_constraintTop_toBottomOf="@id/layoutUlicaWybierz"
+        app:layout_constraintTop_toBottomOf="@id/editTextUlica"
         android:orientation="vertical"
         android:background="@drawable/wyszukiwanie_bg"
         app:layout_constraintEnd_toEndOf="parent"
