--- a/smieci/app/src/main/res/layout/main.xml
+++ b/smieci/app/src/main/res/layout/main.xml
@@ -11,8 +11,6 @@
     android:fitsSystemWindows="true"
     >
 
-
-
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -32,7 +30,7 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:navigationIcon="@drawable/user_icon_vector"
+            app:navigationIcon="@drawable/baseline_menu_24"
             android:background="@color/dark_gray"
             >
 
@@ -76,10 +74,10 @@
                 android:orientation="horizontal"
                 >
                 <LinearLayout
-                    android:layout_width="90dp"
+                    android:layout_width="120dp"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:layout_margin="10dp"
+
                     android:layout_gravity="center">
 
                     <TextView
@@ -87,8 +85,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/papiery"
-                        android:textSize="22dp"
-                        android:textFontWeight="500"
+                        android:textSize="20dp"
+                        android:textFontWeight="600"
                         android:textColor="@color/gray_text"
                         android:layout_marginBottom="5dp"
                         android:layout_gravity="center"
@@ -114,7 +112,7 @@
                     android:src="@drawable/kosz_papier"
                     android:layout_gravity="bottom"
                     android:layout_marginTop="20dp"
-                    android:layout_marginStart="5dp"
+
                     >
 
                 </ImageView>
@@ -134,10 +132,9 @@
                 android:orientation="horizontal"
                 >
                 <LinearLayout
-                    android:layout_width="90dp"
+                    android:layout_width="120dp"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:layout_margin="10dp"
                     android:layout_gravity="center">
 
                     <TextView
@@ -145,8 +142,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/metal"
-                        android:textSize="22dp"
-                        android:textFontWeight="500"
+                        android:textSize="20dp"
+                        android:textFontWeight="600"
                         android:textColor="@color/gray_text"
                         android:layout_marginBottom="5dp"
                         android:layout_gravity="center"
@@ -172,7 +169,7 @@
                     android:src="@drawable/kosz_metal"
                     android:layout_gravity="bottom"
                     android:layout_marginTop="20dp"
-                    android:layout_marginStart="5dp"
+
                     >
 
                 </ImageView>
@@ -192,10 +189,10 @@
                 android:orientation="horizontal"
                 >
                 <LinearLayout
-                    android:layout_width="90dp"
+                    android:layout_width="120dp"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:layout_margin="10dp"
+
                     android:layout_gravity="center">
 
                     <TextView
@@ -203,8 +200,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/szklo"
-                        android:textSize="22dp"
-                        android:textFontWeight="500"
+                        android:textSize="20dp"
+                        android:textFontWeight="600"
                         android:textColor="@color/gray_text"
                         android:layout_marginBottom="5dp"
                         android:layout_gravity="center"
@@ -230,7 +227,6 @@
                     android:src="@drawable/kosz_szklo"
                     android:layout_gravity="bottom"
                     android:layout_marginTop="20dp"
-                    android:layout_marginStart="5dp"
                     >
 
                 </ImageView>
@@ -250,10 +246,10 @@
                 android:orientation="horizontal"
                 >
                 <LinearLayout
-                    android:layout_width="90dp"
+                    android:layout_width="120dp"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:layout_margin="10dp"
+
                     android:layout_gravity="center">
 
                     <TextView
@@ -261,8 +257,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/bio"
-                        android:textSize="22dp"
-                        android:textFontWeight="500"
+                        android:textSize="20dp"
+                        android:textFontWeight="600"
                         android:textColor="@color/gray_text"
                         android:layout_marginBottom="5dp"
                         android:layout_gravity="center"
@@ -288,7 +284,7 @@
                     android:src="@drawable/kosz_bio"
                     android:layout_gravity="bottom"
                     android:layout_marginTop="20dp"
-                    android:layout_marginStart="5dp"
+
                     />
 
             </LinearLayout>
@@ -538,7 +534,7 @@
                     android:textFontWeight="500"
                     android:paddingHorizontal="15dp"
                     android:paddingBottom="20dp"
-                    android:visibility="visible"
+                    android:visibility="gone"
                     android:textColor="@color/gray_text"/>
 
 
